--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.9",
     "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/swagger": "^7.3.1",
     "axios": "^1.7.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "openai": "^4.50.0",
     "openai-api": "^1.3.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.1.1"
   },
   "devDependencies": {
